# setup.cfg file at the root directory
[metadata]
name = extract_json_from_string
version = 0.0.1
author = Kunti Patidar
description = For extracting valid JSONs from string
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/at-75/extract_jsons_from_string
classifiers=
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
[options]
packages = find:
python_requires = >=3.7, <4
install_package_data= True