[package]
name = "extract_jsons_from_string"
version = "0.1.0"
edition = "2021"
description = "A library to extract valid JSONs from a string to a vector"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3